Fix placing of CategoryTabs on small devices and fix grid margin-bottom

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   width: 95vw;
   overflow: hidden;
   justify-content: center;
-  padding-bottom: 5rem;
+  padding-bottom: 1rem;
 }
 
 .title {
